--- a/balda-2.xcodeproj/xcshareddata/xcschemes/balda-2.xcscheme
+++ b/balda-2.xcodeproj/xcshareddata/xcschemes/balda-2.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5F23FBE42ABE257300417468"
-               BuildableName = "balda-2.app"
+               BuildableName = "Balda.app"
                BlueprintName = "balda-2"
                ReferencedContainer = "container:balda-2.xcodeproj">
             </BuildableReference>
@@ -57,6 +57,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "en"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -68,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5F23FBE42ABE257300417468"
-            BuildableName = "balda-2.app"
+            BuildableName = "Balda.app"
             BlueprintName = "balda-2"
             ReferencedContainer = "container:balda-2.xcodeproj">
          </BuildableReference>
@@ -85,7 +86,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5F23FBE42ABE257300417468"
-            BuildableName = "balda-2.app"
+            BuildableName = "Balda.app"
             BlueprintName = "balda-2"
             ReferencedContainer = "container:balda-2.xcodeproj">
          </BuildableReference>
