--- a/balda-2/Info.plist
+++ b/balda-2/Info.plist
@@ -7,5 +7,9 @@
 		<string>en</string>
 		<string>de</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Nunito-ExtraBold.ttf</string>
+	</array>
 </dict>
 </plist>
