--- a/balda-2/Info.plist
+++ b/balda-2/Info.plist
@@ -11,5 +11,11 @@
 	<array>
 		<string>Nunito-ExtraBold.ttf</string>
 	</array>
+    <key>UISupportedInterfaceOrientations</key>
+    <array>
+        <string>UIInterfaceOrientationPortrait</string>
+    </array>
+    <key>UIRequiresFullScreen</key>
+    <true/>
 </dict>
 </plist>
